--- a/Activity #8/index.html
+++ b/Activity #8/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Chai Calculator</title>
+    <title>Calculator using Counter Function with Closures</title>
     <style>
       body {
         background-color: #222;
