Adding Activity #11 - Dynamic To-Do List

--- a/Activity #9/index.html
+++ b/Activity #9/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>Color Picker - Separate Controls</title>
+    <title>Color Picker</title>
     <style>
       body {
         text-align: center;
